fixed design spacing issue

--- a/src/styles/Designs.css
+++ b/src/styles/Designs.css
@@ -18,6 +18,7 @@
 
 .Design_Container {
     width: 90%;
+    max-width: 1200px;
     height: auto;
     display: flex;
     flex-direction: row;
@@ -40,8 +41,6 @@
     padding-bottom: 20px;
     margin-top: 10px;
     margin-bottom: 50px;
-    margin-right: 50px;
-    margin-left: 50px;
     box-shadow: 1px 1px 10px;
     border: 2px solid var(--main-border-color);
 }
